fix:logo issues on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -1495,6 +1495,16 @@ a:hover {
     -moz-transition: all 0.27s cubic-bezier(0, 0, 0.58, 1) 0s;
     -webkit-transition: all 0.27s cubic-bezier(0, 0, 0.58, 1) 0s;
 }
+
+@media (max-width: 640px) {
+    .logo a img {
+        width: 38px;
+        height: 25px; /* maintain aspect ratio */
+        top: 5px;     /* optional, adjust positioning */
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
 /* Dark Header */
 
 body.dark .header .logo a img.logo-light {
